@startuml
allowmixing

title Communication Design and Dependency Injection in SENSEI

top to bottom direction

skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam linetype polyline

skinparam class {
    BackgroundColor #F7F7F7
    BorderColor #303030
    ArrowColor #202020
}

skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #707070
}

class ModuleLoader {
    - communicator_factory : CommunicatorFactory
    + import_modules(xml_root)
}

class CommunicatorFactory <<Simple Factory>> {
    + create_communicator(xml_node) : CommunicatorInterface
}

interface CommunicatorInterface <<Strategy>> {
    + send(parameters)
    + receive()
}

class NullCommunicator <<Null Object>> {
    + send(parameters)
    + receive()
}

class PubMqttCommunicator <<Concrete Strategy>> {
    - pub_topic
    + send(parameters)
    + receive()
}

class PubSubMqttCommunicator <<Concrete Strategy>> {
    - pub_topic
    - sub_topic
    - response_queue
    + send(parameters)
    + receive()
}

class HttpCommunicator <<Concrete Strategy>> {
    - base_url
    + send(parameters)
    + receive()
}

class CommandHandler {
    - communicator : CommunicatorInterface
    + CommandHandler(xml_node, communicator)
    + node_process(xml_node, memory)
}

collections "tab_modules" as Registry

CommunicatorInterface <|.. NullCommunicator
CommunicatorInterface <|.. PubMqttCommunicator
CommunicatorInterface <|.. PubSubMqttCommunicator
CommunicatorInterface <|.. HttpCommunicator

ModuleLoader --> CommunicatorFactory : requests communicator

CommunicatorFactory ..> NullCommunicator : creates
CommunicatorFactory ..> PubMqttCommunicator : creates
CommunicatorFactory ..> PubSubMqttCommunicator : creates
CommunicatorFactory ..> HttpCommunicator : creates

ModuleLoader ..> CommandHandler : creates and injects\ncommunicator

CommandHandler o--> CommunicatorInterface : stores dependency

ModuleLoader --> Registry : registers configured\nhandler instance
Registry o--> CommandHandler : contains

note right of CommunicatorFactory
Selects the concrete communicator
according to the commMode attribute:

NULL
MQTT_PUB
MQTT_PUB_SUB
HTTP
end note

note right of CommandHandler
Constructor-based Dependency Injection

The communicator is supplied by
ModuleLoader through the constructor.

The handler depends on
CommunicatorInterface and does not
create its own communication object.
end note

note left of NullCommunicator
Provides the same interface
when no message exchange
is required.
end note

legend bottom
  Strategy: CommunicatorInterface and concrete communicators
  Simple Factory: CommunicatorFactory
  Null Object: NullCommunicator
  Dependency Injection: ModuleLoader supplies the communicator
endlegend

@enduml